--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,44 +1,27 @@
-services: 
+services:
+  db:
+    image: postgres:15-alpine
+    env_file: .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
   redis:
     image: redis:7
     ports:
       - "6379:6379"
 
-  db:
-    image: postgres:16-alpine
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./init:/docker-entrypoint-initdb.d
-    ports:
-      - "5432:5432"
-
   app:
     build: .
-    command: python alx_travel_app/manage.py runserver 0.0.0.0:8000
+    env_file: .env
     volumes:
-      - .:/code
+      - .:/app
+    depends_on:
+      - db
+      - redis
     ports:
       - "8000:8000"
-    depends_on:
-      - redis
-      - db
-    environment:
-     - DJANGO_SETTINGS_MODULE=alx_travel_app.settings
-
-  worker:
-    build: .
-    command: celery -A alx_travel_app worker --loglevel=info --pool=solo
-    volumes:
-      - .:/code
-    depends_on:
-      - redis
-      - db
-    environment:
-     - DJANGO_SETTINGS_MODULE=alx_travel_app.settings
 
 volumes:
-  db_data: {}
+  postgres_data:
